# emailfilter

./: .dockerignore  .env.example  .envrc  .gitignore  .memory  Dockerfile  Dockerfile.train  NIX_SETUP.md  README.md  config.yaml.example  docker-compose.yml  docker-setup.bat  docker-setup.sh  flake.nix  generate_call_graph.py  generate_categorizer_graph.py  grafana-agent.yml  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements-train.txt  requirements.txt  setup-env.sh  setup.py  test_local_state.py  test_logging.py
.cursor/rules/: keep-logic.mdc
examples/: categorize_example.py  daemon_example.py  filter_example.py  imap_example.py  sample_emails.json
graphs/: README.md  categorizer_call_graph.dot
src/emailfilter/: __init__.py  categorizer.py  cli.py  config_manager.py  email_processor.py  filter.py  imap_client.py  imap_manager.py  models.py  sqlite_state_manager.py  state_manager.py
src/emailfilter/inference/: categorizer.py  cli.py  models.py
src/emailfilter/training/: cli.py  model.py  trainer.py
src/mailmind/: __init__.py  __main__.py  categorizer.py  cli.py  config_manager.py  email_processor.py  imap_client.py  imap_downloader.py  imap_manager.py  models.py  pre_training.py  sqlite_state_manager.py
src/mailmind/config/: __init__.py  config_converter.py  config_manager.py  config_validator.py  openai.py
src/mailmind/inference/: categorizer.py  cli.py  models.py
src/mailmind/training/: cli.py  data.py  download_data.py  model.py
tests/: conftest.py  test_categorizer.py  test_cli.py  test_email_processor.py  test_filter.py  test_integration.py  test_local_state.py  test_logging.py  test_sqlite_state_manager.py
